--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Müzik Dükkanım</h1>
-    <nav>
-      <a href="#">Anasayfa</a>
-      <a href="#">Ürünlerimiz</a>
-      <a href="#">Hakkımızda</a>
-    </nav>
+    <header>
+      <h1 class="title">Müzik Dükkanım</h1>
+      <nav>
+        <a class="main-link" href="index.html">Anasayfa</a>
+        <a class="products-link" href="products.html">Ürünlerimiz</a>
+        <a class="abouts-us-link" href="about-us.html">Hakkımızda</a>
+      </nav>
+    </header>
 
     <section class="main">
-      <h2>Anasayfa</h2>
+      <h2>Ana Sayfa</h2>
 
       <p>
         Müzik Dükkanım sitemize hoş geldiniz! Bu sitede çeşitli müzik aletlerini
         bulabilirsiniz. Uygun fiyatlarımız ve kaliteli ürünlerimiz için
-        <a href="#">Ürünlerimiz</a> sayfamızı ziyaret edebilirsiniz
+        <a href="products.html">Ürünlerimiz</a> sayfamızı ziyaret edebilirsiniz
       </p>
 
       <h3>Sitemizde Bulunan Müzik Aletleri</h3>
@@ -32,71 +34,6 @@
         <li>Piyano</li>
         <li>Keman</li>
       </ul>
-    </section>
-
-    <section class="products">
-      <h2>Ürünlerimiz</h2>
-
-      <div class="product">
-        <img src="img/davul1.jpg" alt="davul 1" />
-        <p>Davul 1<span class="price-text">6000₺</span></p>
-      </div>
-
-      <div class="product">
-        <img src="img/davul2.jpg" alt="davul 2" />
-        <p>Davul 2<span class="price-text">5000₺</span></p>
-      </div>
-
-      <div class="product">
-        <img src="img/gitar1.jpg" alt="gitar 1" />
-        <p>Gitar 1<span class="price-text">10000₺</span></p>
-      </div>
-
-      <div class="product">
-        <img src="img/gitar2.jpg" alt="gitar 2" />
-        <p>Gitar 2<span class="price-text">7000₺</span></p>
-      </div>
-
-      <div class="product">
-        <img src="img/keman1.jpg" alt="keman 1" />
-        <p>Keman 1<span class="price-text">8000₺</span></p>
-      </div>
-
-      <div class="product">
-        <img src="img/keman2.jpg" alt="keman 2" />
-        <p>Keman 2<span class="price-text">1200₺</span></p>
-      </div>
-
-      <div class="product">
-        <img src="img/piano1.jpg" alt="piano1" />
-        <p>Piyano 1<span class="price-text">9000₺</span></p>
-      </div>
-    </section>
-
-    <section class="about-us">
-      <h2>Hakkımızda</h2>
-
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit natus
-        nisi tenetur!
-      </p>
-      <h3>Vizyonumuz</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aut
-        voluptatibus deleniti, illo repellat amet dignissimos nulla laudantium
-        expedita mollitia impedit ab nesciunt incidunt sequi ipsum aliquid
-        laborum quis quae adipisci totam voluptates. Voluptate aut, est quisquam
-        fuga commodi nam.
-      </p>
-      <h3>Misyonumuz</h3>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, vitae?
-        Sunt nam maiores eius eligendi alias, iusto dolores recusandae dicta.
-        Alias quasi accusantium mollitia dolorem magnam consequatur inventore
-        sint, unde itaque repellendus quas ad animi eum quibusdam architecto
-        natus, sit odio voluptatibus placeat ipsa eveniet atque dicta.
-        Perferendis, laborum nobis?
-      </p>
     </section>
   </body>
 </html>
